update to azure blob and postgres